--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
         </nav>
        </header>
        <main>
-        <section class="about-me">
+        <section id="about-me">
             <h2>About me</h2>
             <p>Hello, my name is Timothy Mardis. I am a web devolper with experience in HTML, CSS, and Javascript. I enjoy basketball, writing music, playing with my daughter, and coding!
             My goal is continue to grow and learn as a devoloper while contributing to quality projects that improve peoples lives through the power of the internet.
             </p>
         </section>
-        <section class="work">
+        <section id="work">
             <h2>Work</h2>
             <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">Demo Company Website</a>
             <a href="https://boomerizzy3.github.io/prework-study-guide/" target="_blank">Student Web Developer Study Guide</a>
             <a href="404notfound" target="_blank">Demo School website</a>
             <a href="404notfound" target="_blank">Demo Project</a>
         </section>
-        <section class="contact-me">
+        <section id="contact-me">
             <h2>Contact me</h2>
             <p>Email: mardistj96@yahoo.com</p>
             <p>Phone: (580)495-8311</p>
