Added images directory

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./assets/reset.css">
-        <link rel="stylesheet" href="./assets/style.css">
+        <link rel="stylesheet" href="./assets/css/reset.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <title>Professional Portfolio</title>
     </head>
     <body>
@@ -28,6 +28,7 @@
         </nav>
        </header>
        <main>
+        <img src="" alt="">
         <section id="about-me">
             <h2>About me</h2>
             <p>Hello, my name is Timothy Mardis. I am a web devolper with experience in HTML, CSS, and Javascript. I enjoy basketball, writing music, playing with my daughter, and coding!
