Added styling to About me section

--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
         </nav>
        </header>
        <main>
-        <img src="" alt="">
         <section id="about-me">
             <h2>About me</h2>
+            <article>
+                <img src="./assets/images/Profile pic.jpg" alt="Picture of Timothy Mardis">
             <p>Hello, my name is Timothy Mardis. I am a web devolper with experience in HTML, CSS, and Javascript. I enjoy basketball, writing music, playing with my daughter, and coding!
             My goal is continue to grow and learn as a devoloper while contributing to quality projects that improve peoples lives through the power of the internet.
             </p>
+            </article>
         </section>
         <section id="work">
             <h2>Work</h2>
-            <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">Demo Company Website</a>
+            <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">Sample Company Website</a>
             <a href="https://boomerizzy3.github.io/prework-study-guide/" target="_blank">Student Web Developer Study Guide</a>
-            <a href="404notfound" target="_blank">Demo School website</a>
-            <a href="404notfound" target="_blank">Demo Project</a>
+            <a href="404notfound" target="_blank">Sample School website</a>
+            <a href="404notfound" target="_blank">Sample Project</a>
         </section>
         <section id="contact-me">
             <h2>Contact me</h2>
