--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         </section>
         <section id="work">
             <h2>Work</h2>
-            <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">Sample Company Website</a>
+            <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">Sample Company Website
+                <img src="./assets/images/Sample Company Website pic.jpg" alt="Picture of a Sample website">
+            </a>
             <a href="https://boomerizzy3.github.io/prework-study-guide/" target="_blank">Student Web Developer Study Guide</a>
             <a href="404notfound" target="_blank">Sample School website</a>
             <a href="404notfound" target="_blank">Sample Project</a>
