Added styling to Work section

--- a/index.html
+++ b/index.html
@@ -39,12 +39,20 @@
         </section>
         <section id="work">
             <h2>Work</h2>
-            <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">Sample Company Website
-                <img src="./assets/images/Sample Company Website pic.jpg" alt="Picture of a Sample website">
-            </a>
-            <a href="https://boomerizzy3.github.io/prework-study-guide/" target="_blank">Student Web Developer Study Guide</a>
-            <a href="404notfound" target="_blank">Sample School website</a>
-            <a href="404notfound" target="_blank">Sample Project</a>
+            <article>
+                <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">
+                    <img src="./assets/images/Sample Company Website pic.jpg" alt="Picture of a sample website">
+                </a>
+                <a href="https://boomerizzy3.github.io/prework-study-guide/" target="_blank">
+                    <img src="./assets/images/Sample Study Guide Website pic.jpg" alt="Picture of a student study guide website">
+                </a>
+                <a href=>
+                    <img src="./assets/images/Coming Soon! pic.jpg" alt="Picture of text 'Coming Soon'">
+                </a>
+                <a href=>
+                    <img src="./assets/images/Coming Soon! pic.jpg" alt="Picture of text 'Coming Soon'">
+                </a>
+            </article>
         </section>
         <section id="contact-me">
             <h2>Contact me</h2>
