Added Responsive Design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css">
         <link rel="stylesheet" href="./assets/css/style.css">
         <title>Professional Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
        <header>
@@ -56,11 +57,13 @@
         </section>
         <section id="contact-me">
             <h2>Contact me</h2>
-            <p>Email: mardistj96@yahoo.com</p>
+            <article>
+                <p>Email: mardistj96@yahoo.com</p>
             <p>Phone: (580)495-8311</p>
             <p>GitHub:
                 <a href="https://github.com/Boomerizzy3" target="_blank">github.com/Boomerizz3</a>
             </p>
+            </article>
         </section>
        </main>
     </body>
