Linked resume.pdf

--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
+<!--Lets the browser know that this document type is an html document-->
 <!DOCTYPE html>
 
+<!--Specifies the language of the document-->
 <html lang="en-us">
+    <!--Container for metadata-->
     <head>
+        <!--Specifies the character set-->
         <meta charset="UTF-8" />
+        <!--Links this html document to a css style sheet-->
         <link rel="stylesheet" href="./assets/css/reset.css">
         <link rel="stylesheet" href="./assets/css/style.css">
+        <!--Defines the title of the document and is shown in the page's tab of the browser-->
         <title>Professional Portfolio</title>
+        <!--Tells the browser what the width of the page should be considered "full width"-->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
+
+    <!--Container for all of the content of the document-->
     <body>
+        <!--Container for Page header and Navigation bar-->
        <header>
         <h1>Timothy Mardis</h1>
         <nav>
+            <!--Defines an unordered list-->
             <ul>
                 <li>
                     <a href="#about-me">About me</a>
@@ -22,16 +33,19 @@
                 <li>
                     <a href="#contact-me">Contact me</a>
                 </li>
+                <!--Links to a pdf-->
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="./assets/Tim resume 02-21.pdf" target="_blank">Resume</a>
                 </li>
             </ul>
         </nav>
        </header>
+       <!--Container for main content of page-->
        <main>
         <section id="about-me">
             <h2>About me</h2>
             <article>
+                <!--Image-->
                 <img src="./assets/images/Profile pic.jpg" alt="Picture of Timothy Mardis">
             <p>Hello, my name is Timothy Mardis. I am a web devolper with experience in HTML, CSS, and Javascript. I enjoy basketball, writing music, playing with my daughter, and coding!
             My goal is continue to grow and learn as a devoloper while contributing to quality projects that improve peoples lives through the power of the internet.
@@ -41,6 +55,7 @@
         <section id="work">
             <h2>Work</h2>
             <article>
+                <!--Image links that will open up a new tab when clicked-->
                 <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">
                     <img src="./assets/images/Sample Company Website pic.jpg" alt="Picture of a sample website">
                 </a>
@@ -60,6 +75,7 @@
             <article>
                 <p>Email: mardistj96@yahoo.com</p>
             <p>Phone: (580)495-8311</p>
+            <!--Link to github that opens up in a new tab-->
             <p>GitHub:
                 <a href="https://github.com/Boomerizzy3" target="_blank">github.com/Boomerizz3</a>
             </p>
