Added captions to image links

--- a/index.html
+++ b/index.html
@@ -58,15 +58,19 @@
                 <!--Image links that will open up a new tab when clicked-->
                 <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">
                     <img src="./assets/images/Sample Company Website pic.jpg" alt="Picture of a sample website">
+                    <figcaption>Sample Company Website</figcaption>
                 </a>
                 <a href="https://boomerizzy3.github.io/prework-study-guide/" target="_blank">
                     <img src="./assets/images/Sample Study Guide Website pic.jpg" alt="Picture of a student study guide website">
+                    <figcaption>Sample Study Guide Website</figcaption>
                 </a>
                 <a href=>
                     <img src="./assets/images/Coming Soon! pic.jpg" alt="Picture of text 'Coming Soon'">
+                    <figcaption>Coming soon!</figcaption>
                 </a>
                 <a href=>
                     <img src="./assets/images/Coming Soon! pic.jpg" alt="Picture of text 'Coming Soon'">
+                    <figcaption>Coming soon!</figcaption>
                 </a>
             </article>
         </section>
