--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="work">
             <h2>Work</h2>
             <article>
-                <!--Image links that will open up a new tab when clicked-->
+                <!--Image links that will open up a new tab when clicked. figcaption adds caption to image-->
                 <a href="https://boomerizzy3.github.io/Module-1-Challenge/" target="_blank">
                     <img src="./assets/images/Sample Company Website pic.jpg" alt="Picture of a sample website">
                     <figcaption>Sample Company Website</figcaption>
