Added website to work section

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <img src="./assets/images/Sample Study Guide Website pic.jpg" alt="Picture of a student study guide website">
                     <figcaption>Sample Study Guide Website</figcaption>
                 </a>
-                <a href=>
-                    <img src="./assets/images/Coming Soon! pic.jpg" alt="Picture of text 'Coming Soon'">
+                <a href=https://sminker0401.github.io/Its-Raining-Tacos/>
+                    <img src="./assets/images/website-screenshot_rainingtacos.png" alt="Picture of a restaurant locating website">
                     <figcaption>Coming soon!</figcaption>
                 </a>
                 <a href=>
