Added RunnerUp website

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 </a>
                 <a href=https://sminker0401.github.io/Its-Raining-Tacos/>
                     <img src="./assets/images/website-screenshot_rainingtacos.png" alt="Picture of a restaurant locating website">
-                    <figcaption>Coming soon!</figcaption>
+                    <figcaption>It's Raining Tacos</figcaption>
                 </a>
-                <a href=>
-                    <img src="./assets/images/Coming Soon! pic.jpg" alt="Picture of text 'Coming Soon'">
-                    <figcaption>Coming soon!</figcaption>
+                <a href=https://fathomless-savannah-04535.herokuapp.com/>
+                    <img src="./assets/images/runnerup_screenshot.jpg" alt="Picture of text 'Coming Soon'">
+                    <figcaption>RunnerUp</figcaption>
                 </a>
             </article>
         </section>
