--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     <img src="./assets/images/Sample Company Website pic.jpg" alt="Picture of a sample website">
                     <figcaption>Sample Company Website</figcaption>
                 </a>
-                <a href="https://boomerizzy3.github.io/prework-study-guide/" target="_blank">
-                    <img src="./assets/images/Sample Study Guide Website pic.jpg" alt="Picture of a student study guide website">
-                    <figcaption>Sample Study Guide Website</figcaption>
+                <a href="https://whatever-marketplace.herokuapp.com/" target="_blank">
+                    <img src="./assets\images\Marketplace.png" alt="Picture of a marketplace website">
+                    <figcaption>Whatever Marketplace</figcaption>
                 </a>
                 <a href=https://sminker0401.github.io/Its-Raining-Tacos/>
                     <img src="./assets/images/website-screenshot_rainingtacos.png" alt="Picture of a restaurant locating website">
